--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,3 +36,14 @@ jobs:
           name: springboot-native-image
           path: target/*
 
+      - name: Log in to Azure Container Registry
+        uses: azure/docker-login@v1
+        with:
+          login-server: charliedockerimages.azurecr.io
+          username: ${{ secrets.ACR_USERNAME }}
+          password: ${{ secrets.ACR_PASSWORD }}
+
+      - name: Build and push Docker image
+        run: |
+          docker build -t charliedockerimages.azurecr.io/spring-native-app:latest .
+          docker push charliedockerimages.azurecr.io/spring-native-app:latest
