--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -39,11 +39,24 @@ jobs:
       - name: Log in to Azure Container Registry
         uses: azure/docker-login@v1
         with:
-          login-server: charliedockerimages.azurecr.io
+          login-server: ${{ secrets.ACR_REGISTRY }}
           username: ${{ secrets.ACR_USERNAME }}
           password: ${{ secrets.ACR_PASSWORD }}
 
       - name: Build and push Docker image
         run: |
-          docker build -t charliedockerimages.azurecr.io/spring-native-app:latest .
-          docker push charliedockerimages.azurecr.io/spring-native-app:latest
+          docker build -t ${{ secrets.ACR_REGISTRY }}/spring-native-app:latest .
+          docker push ${{ secrets.ACR_REGISTRY }}/spring-native-app:latest
+
+      - name: Azure Login
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Deploy to Azure Web App
+        run: |
+          az webapp config container set \
+            --name charlie-spring-native-app \
+            --resource-group azure-java \
+            --docker-custom-image-name ${{ secrets.ACR_REGISTRY }}/spring-native-app:latest \
+            --docker-registry-server-url https://${{ secrets.ACR_REGISTRY }}
