--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -48,10 +48,13 @@ jobs:
           docker build -t ${{ secrets.ACR_REGISTRY }}/spring-native-app:latest .
           docker push ${{ secrets.ACR_REGISTRY }}/spring-native-app:latest
 
-      - name: Azure Login
-        uses: azure/login@v1
+      - name: Azure login
+        uses: azure/login@v2
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
 
       - name: Deploy to Azure Web App
         run: |
