--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -48,18 +48,17 @@ jobs:
           docker build -t ${{ secrets.ACR_REGISTRY }}/spring-native-app:latest .
           docker push ${{ secrets.ACR_REGISTRY }}/spring-native-app:latest
 
-      - name: Azure login
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+#      - name: Azure login
+#        uses: azure/login@v2
+#        with:
+#          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+#          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+#          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-
-      - name: Deploy to Azure Web App
-        run: |
-          az webapp config container set \
-            --name charlie-spring-native-app \
-            --resource-group azure-java \
-            --docker-custom-image-name ${{ secrets.ACR_REGISTRY }}/spring-native-app:latest \
-            --docker-registry-server-url https://${{ secrets.ACR_REGISTRY }}
+#      - name: Deploy to Azure Web App
+#        run: |
+#          az webapp config container set \
+#            --name charlie-spring-native-app \
+#            --resource-group azure-java \
+#            --docker-custom-image-name ${{ secrets.ACR_REGISTRY }}/spring-native-app:latest \
+#            --docker-registry-server-url https://${{ secrets.ACR_REGISTRY }}
