--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,15 @@
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.10.1</version> <!-- Make sure the version is compatible -->
+				<configuration>
+					<source>17</source> <!-- Use Java 17 -->
+					<target>17</target> <!-- Use Java 17 -->
+				</configuration>
+			</plugin>
 			<!-- Spring Boot -->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
